--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,11 +15,10 @@ body{
 	flex-direction: column;
 	background: transparent;
 	min-height: 100%;
-    margin-top: 2%;
 }
 .container{
 	position: relative;
-	width: 968px;
+	width: 868px;
 	max-width: 100%;
 	min-height: 550px;
 	background: #ffffff;
@@ -63,8 +62,6 @@ body{
 	z-index: 2;
 }
 
-
-
 form {
 	background: #ffffff;
 	display: flex;
@@ -81,6 +78,7 @@ form {
 h1{
 	font-weight: bold;
 	margin: 0;
+	font-size: 24px !important;
     font-family: "Slackey", sans-serif;
     letter-spacing: 2px;
     text-shadow: 0px 0px 4px #00000043;
@@ -95,12 +93,13 @@ p{
 }
 input{
 	background: #eee;
-	padding: 10px 5px;
+	padding: 10px 15px;
 	margin: 8px 15px;
 	width: 100%;
 	border-radius: 5px;
 	border: none;
 	outline: none;
+	letter-spacing: 3px !important;
 }
 
 select{
