--- a/assets/css/styleDashboard.css
+++ b/assets/css/styleDashboard.css
@@ -43,6 +43,11 @@ li span{
   margin-right: 20px;
 }
 
+span.d-none{
+  font-size: 16px !important;
+  letter-spacing: 1px !important;
+}
+
 a{
   text-decoration: none;
   color: #ffffff;
